source/stylesheets/components.scss
// Styles for standalone components.

@import "constants";
@import "mixins";

.grid-layout {
  pointer-events: none;

  div {
    border-right: 1px solid $color-grid;

    &:last-child {
      border: 0;
    }
  }

  div.dashed {
    border-right: 1px dashed $color-grid;
  }

  &__unit {
    color: $color-grid-unit;
    font-size: rem(11px);
    padding-left: rem(3px);
  }
}

.logo {
  width: rem(190px);
}

.link {
  border-bottom: 1px solid lighten($color-blue, 40%);
  color: $color-blue;
  font-weight: 600;
  text-decoration: none;
  transition: border-color 300ms ease-out;

  &:hover {
    border-color: currentColor;
  }

  &--red {
    color: $color-red;
  }
}

.button {
  background-color: $color-red;
  color: $color-white;
  box-shadow: 0 1px 1px 0 #231f20;
  font-size: rem(18px);
  border-radius: 25px;
  display: inline-block;
  font-weight: bold;
  line-height: 2.5rem;
  padding: 0.1em 1.8em;
  text-decoration: none;
  text-transform: uppercase;
}

.clients {
  margin-top: 8.75rem;
  &_logo {
    &-holder {
      display: inline-block;
    }
  }

  a {
    margin: 0 auto;
    vertical-align: middle;
  }
}

.team {
  &__divider {
    padding-top: 3.4375rem;
  }

  &__name {
    line-height: 1.575rem;
    margin-bottom: 0.65rem;
    margin-top: 0.5rem;
  }

  &__member {
    min-height: 20rem;
    padding-right: 1rem;
  }
}

.contact {
  &__to-action {
    line-height: 1.8125rem;
    margin-bottom: 1.25rem;
  }
}

.shader {
  &--white {
    background-color: $color-white;
  }
}

.image {
  max-width: 100%;
  max-height: 100%;
}

.phone-icon {
  height: 1em;
  vertical-align: sub;
}

.language {
  position: absolute;
  top: 4rem;
  right: 5rem;
  z-index: 1;
}

.language .flag {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  display: inline;
  z-index: 1;
}

.language .switch {
  float: right;
  margin-top: 5px;
  margin-left: 5px;
  z-index: 1;
}

.language .switch a {
  color: $color-blue;
}

